[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenlens"
version = "0.1.6"
description = "A library for accurate token counting and limit validation across various LLM providers"
authors = [
    {name = "Giri Ramanathan", email = "vgiri2015@gmail.com"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["llm", "tokens", "openai", "mistral", "anthropic", "tokenizer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies required for basic functionality
dependencies = [
    "tiktoken>=0.5.2",
    "pydantic>=1.10.13",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/vgiri2015/tokenlens"
Documentation = "https://github.com/vgiri2015/tokenlens/tree/main/docs"
Repository = "https://github.com/vgiri2015/tokenlens.git"
"Bug Tracker" = "https://github.com/vgiri2015/tokenlens/issues"

# Optional dependencies for specific providers
[project.optional-dependencies]
openai = [
    "openai>=1.3.7",
]
anthropic = [
    "anthropic>=0.3.0",
]
google = [
    "google-generativeai>=0.3.0",
]
huggingface = [
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
]
mistral = [
    "mistralai>=0.0.7",
]
stability = [
    "stability-sdk>=0.8.0",
]
media = [
    "torch>=2.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]
all = [
    "openai>=1.3.7",
    "anthropic>=0.3.0",
    "google-generativeai>=0.3.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "mistralai>=0.0.7",
    "stability-sdk>=0.8.0",
    "torch>=2.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[tool.setuptools]
packages = ["tokenlens", "tokenlens.providers", "tokenlens.tokenizers"]
